--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="container home-content" id="home">
             <div class="row">
                 <div class="col-md-6 dp-image text-center">
-                    <img src="./images/image.png" alt="gaur-portfolio" class="img-fluid">
+                    <img src="image.png" alt="gaur-portfolio" class="img-fluid">
                 </div>
                 <div class="col-md-6 py-5">
                     <h1>Hi, I'm <span style="color: #55b4ed;""><br>Front-End Developer</span></h1>
