--- a/index.html
+++ b/index.html
@@ -52,10 +52,9 @@
                     <h1>Hi, I'm <span style="color: #55b4ed;""><br>Front-End Developer</span></h1>
                     <p class=" home-desc">Fond of creating web application designs and bring them to life using code &
                             develop mobile designs.</p>
-                            <form method="get" action="./Dev-gaur.pdf" target="_blank">
-                                <button class="btn" style="background-color: #55b4ed;">Download
-                                    Resume</button>
-                            </form>
+<!--                             <form method="get" action="./Dev-gaur.pdf" target="_blank"> -->
+                                <a class="btn" style="background-color: #55b4ed;" href="https://www.linkedin.com/in/imgaur3/">Checkout LinkedIn</a>
+<!--                             </form> -->
 
                 </div>
 
