--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <p class=" home-desc">Fond of creating web application designs and bring them to life using code &
                             develop mobile designs.</p>
 <!--                             <form method="get" action="./Dev-gaur.pdf" target="_blank"> -->
-                                <a class="btn" style="background-color: #55b4ed;" href="https://www.linkedin.com/in/imgaur3/">Checkout LinkedIn</a>
+                                <a class="btn" target="_blank" style="background-color: #55b4ed;" href="https://www.linkedin.com/in/imgaur3/">Checkout LinkedIn</a>
 <!--                             </form> -->
 
                 </div>
